Fixing mobile overflow styles

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -196,6 +196,11 @@ pre {
     padding-left: 0;
   }
 }
+p code,
+li code {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
 
 
 
